# fzmovies-scraper

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/core/: build_url.rs  client.rs  db.rs  path.rs  scraper.rs
src/data/: constant.rs
src/download_link/: build_url.rs  db.rs  scraper.rs
src/file_quality/: build_url.rs  db.rs  scraper.rs
src/movie_page/: db.rs  scraper.rs
src/opts/: example.rs
