[package]
name = "fzmovies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
native-tls = "0.2.11"
rusqlite = { version = "0.30.0", features = ["bundled"] }
select = "0.6.0"
ureq = {version="2.9.1", features = ["native-tls"]}
url = "2.5.0"
